<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>dtri.com.tw</groupId>
	<artifactId>dtriCloud</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>dtriCloud</name>
	<packaging>pom</packaging>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.7</version>
		<relativePath></relativePath>
	</parent>

	<!-- 全鍊路監控、配置管理、服務註冊與發現(Eureka)、服務熔斷器(Hystrix)、服務關聯(Zuul)、負載均衡(OpenFeign) -->
	<!-- spring boot parent Java 17 + Spring Framework 6.0 + Spring Boot 3.0 +
	Spring Cloud 2022 -->
	<!-- 主體Spring Cloud 宣告聲明 統一微服務 -->
	<properties>
		<java.version>17</java.version>
		<spring-cloud.version>2022.0.3</spring-cloud.version>
		<spring-boot.version>3.0.7</spring-boot.version>
		<spring-framework.version>6.0.9</spring-framework.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<!-- Spring Cloud Dependencies -->
	<!-- Spring Framework Dependencies -->
	<!-- Spring Boot Dependencies -->
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>${spring-framework.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
			    <groupId>org.projectlombok</groupId>
			    <artifactId>lombok</artifactId>
			    <version>1.18.30</version>
			    <scope>provided</scope>
			</dependency>
			<dependency>
	            <groupId>io.grpc</groupId>
	            <artifactId>grpc-bom</artifactId>
	            <version>1.60.0</version>
	            <type>pom</type>
	            <scope>import</scope>
	        </dependency>
		</dependencies>
	</dependencyManagement>
	<!-- build -->
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<modules>
		<module>system-entity-module</module>
		<module>framework-center-eureka-12000</module>
		<module>service-client-12001</module>
		<module>service-system-12010</module>
		<module>service-basic-12020</module>
		<module>service-warehouse-12030</module>
		<module>service-manufacture-12040</module>
		<module>service-schedule-12050</module>
		<module>service-bios-12060</module>
		<module>service-product-12070</module>
		<module>service-material-12080</module>
		<module>service-ai-12090</module>
		<module>service-purchase-12100</module>
	</modules>
</project>